Z-index fixed

--- a/app/styles/visualizations.css
+++ b/app/styles/visualizations.css
@@ -73,6 +73,7 @@ rect.extent {
     box-shadow: 4px 4px 10px rgba(0,0,0,0.4);
 
     pointer-events: none;
+    z-index: 5;
 }
 
 .infoBox.hidden {
